syntax = "proto3";

package notification;

option go_package = "github.com/doniiel/event-ticketing-platform/proto/notification";

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Ticket Service API";
    version: "1.0";
    description: "Handles ticket purchasing and tracking.";
    contact: {
      name: "Ticket Team";
      email: "support@example.com";
    };
  };
  schemes: HTTP;
  consumes: "application/json";
  produces: "application/json";
};

message Notification {
  string id = 1;
  string user_id = 2;
  string message = 3;
  string sent_at = 4;
}

message SendNotificationRequest {
  string user_id = 1;
  string message = 2;
}

message SendNotificationResponse {
  Notification notification = 1;
}

message GetNotificationsRequest {
  string user_id = 1;
}

message GetNotificationsResponse {
  repeated Notification notifications = 1;
}

service NotificationService {
  rpc SendNotification(SendNotificationRequest) returns (SendNotificationResponse) {
    option (google.api.http) = {
      post: "/v1/notifications"
      body: "*"
    };
  }

  rpc GetNotifications(GetNotificationsRequest) returns (GetNotificationsResponse) {
    option (google.api.http) = {
      get: "/v1/notifications/{user_id}"
    };
  }
}